ENH: NAV-84 - Add lat/lon pair as alternative to stopId to routing request parameters.
