# src/main/resources/ch.naviqore.app/openapi.yaml
@@ -137,16 +137,34 @@ paths:
       parameters:
         - name: sourceStopId
           in: query
-          required: true
           schema:
             type: string
-          description: The ID of the source stop.
+          description: The ID of the source stop, required if no sourceLatitude and sourceLongitude are provided.
+        - name: sourceLatitude
+          in: query
+          schema:
+            type: number
+          description: The latitude of the source stop, only used and required if no sourceStopId is provided.
+        - name: sourceLongitude
+          in: query
+          schema:
+              type: number
+          description: The longitude of the source stop, only used and required if no sourceStopId is provided.
         - name: targetStopId
           in: query
-          required: true
           schema:
             type: string
-          description: The ID of the target stop.
+          description: The ID of the target stop, required if no targetLatitude and targetLongitude are provided.
+        - name: targetLatitude
+          in: query
+          schema:
+              type: number
+          description: The latitude of the target stop, only used and required if no targetStopId is provided.
+        - name: targetLongitude
+          in: query
+          schema:
+              type: number
+          description: The longitude of the target stop, only used and required if no targetStopId is provided.
         - name: departureDateTime
           in: query
           schema:
@@ -185,16 +203,25 @@ paths:
   /routing/isolines:
     get:
       summary: Request a list of fastest connections to each reachable stop
-      description: Request a list of fastest connections to each reachable stop from a specified stop at a given departure datetime.
+      description: Request a list of fastest connections to each reachable stop from a specified position at a given departure datetime.
       tags:
         - routing
       parameters:
         - name: stopId
           in: query
-          required: true
           schema:
             type: string
-          description: The ID of the stop.
+          description: The ID of the source stop, required if no latitude and longitude are provided.
+        - name: longitude
+          in: query
+          schema:
+            type: number
+          description: The latitude of the start position, only used and required if no stopId is provided.
+        - name: latitude
+          in: query
+          schema:
+            type: number
+          description: The longitude of the start position, only used and required if no stopId is provided.
         - name: departureDateTime
           in: query
           schema:
